<resources>
    <string name="app_name">CovidApka</string>

    <!-- header string, activity start -->
    <string name="header_text_content_name_aplication">Covid-19 - 7.4.2021 test 1.9.100</string>

    <!-- ButtonText.Track.Countries -->
    <string name="button_text_track_countries_continue">Vybrať krajinu!</string>
    <!-- Activity AffectedCountries Back ActionBar button HOME -->
    <string name="button_actionbar_back_action_home">Voľba krajiny</string>

    <!-- PieChart string items statistic TEXT -->
    <string name="piechart_text_total_cases">Celkom pozitívny</string>
    <string name="piechart_text_recovered">Vyliečení</string>
    <string name="piechart_text_deaths">Mŕtvy</string>
    <string name="piechart_text_active">Aktívny</string>

    <!-- Detail Activity PieChart item statistic text -->
    <string name="detail_activity_piechart_text_total_cases">Celkom pozitívny</string>
    <string name="detail_activity_piechart_text_recovered">Vyliečení</string>
    <string name="detail_activity_piechart_text_critical">Kritické</string>
    <string name="detail_activity_piechart_text_active">Aktívne</string>
    <string name="detail_activity_piechart_text_total_death">Celkom zosnulí</string>


    <!-- PieChart string Content view text informations -->
    <string name="piechart_content_view_text_information_global_stats">Celková štatistika</string>
    <string name="piechart_content_view_text_information_cases">Prípady:</string>
    <string name="piechart_content_view_text_information_recovered">Vyliečení:</string>
    <string name="piechart_content_view_text_information_critical">Kritické:</string>
    <string name="piechart_content_view_text_information_active">Aktívne:</string>
    <string name="piechart_content_view_text_information_today_cases">Prípady dnes:</string>
    <string name="piechart_content_view_text_information_total_deaths">Celkom zosnulí:</string>
    <string name="piechart_content_view_text_information_today_deaths">Dnes zosnulí:</string>
    <string name="piechart_content_view_text_information_affected_countries">Postihnuté krajiny:</string>
    <!-- Detail info Activity -->
    <string name="detail_info_activity_content_view_text_name_country">Krajina:</string>

    <!-- MaterialEditText Components Search HintString -->
    <string name="countries_components_search_hint_string">Vyhľadaj krajinu</string>

    <!-- Activity CovidDataListItems context string -->
    <string name="covid_data_list_items_text_context_flag_name">Meno vlajky</string>
</resources>