<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/covid_background_activity_start"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/linear_layout_detail_info_activity_image_flag_background"
        >
        <ImageView
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:id="@+id/image_view_detail_contry_flag"
            android:layout_margin="0dp"
            android:padding="8dp"
            />
    </LinearLayout>

    <!-- Detail info Context -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/linear_layout_affected_countries_search_components"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        >
        <!-- RelativeLayout - Name country -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_activity_content_view_text_name_country"
                android:textColor="@color/color_piechart_content_view_text_color_total_deaths"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_name_country"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />
        <!-- RelativeLayout - Cases -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_cases"
                android:textColor="@color/color_piechart_content_view_text_color_cases"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_cases"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Recovered -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_recovered"
                android:textColor="@color/color_piechart_content_view_text_color_recovered"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_recovered"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Critical -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_critical"
                android:textColor="@color/color_piechart_content_view_text_color_critical"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_critical"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Active -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_active"
                android:textColor="@color/color_piechart_content_view_text_color_active"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_active"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Today Cases -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_today_cases"
                android:textColor="@color/color_piechart_content_view_text_color_today_cases"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_today_cases"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Today deaths -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_today_deaths"
                android:textColor="@color/color_piechart_content_view_text_color_today_deaths"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_today_deaths"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />

        <!-- RelativeLayout - Total deaths -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piechart_content_view_text_information_total_deaths"
                android:textColor="@color/color_piechart_content_view_text_color_total_deaths"
                android:textSize="18sp"
                android:textStyle="italic"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_detail_content_total_deaths"
                android:text="0"
                android:textColor="#F6CA44"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <!-- Content.line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="2dp"
            android:background="@color/color_piechart_content_view_text_color_line"
            />
    </LinearLayout>
</LinearLayout>